# bzauth-rs

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
.github/workflows/: rust.yml
bzauth-rs/: Cargo.toml  rustfmt.toml
bzauth-rs/examples/: axum_with_diesel.rs
bzauth-rs/src/: auth.rs  lib.rs
bzauth-rs/src/adaptors/: diesel.rs  diesel_traits.rs  error.rs  mod.rs
bzauth-rs/src/adaptors/diesel/: adaptor.rs  mod.rs  traits.rs
bzauth-rs/src/adaptors/mock/: adaptor.rs  mod.rs
bzauth-rs/src/cogs/: authorise.rs  callback.rs  cookie.rs  csrf.rs  error.rs  mod.rs  util.rs
bzauth-rs/src/cogs/http/: request.rs  response.rs
bzauth-rs/src/cogs/routes/: authorise.rs  callback.rs  mod.rs
bzauth-rs/src/contracts/: account.rs  adapt.rs  endpoint.rs  mod.rs  profile.rs  provide.rs  session.rs  token.rs  user.rs
bzauth-rs/src/providers/: discord.rs  error.rs  google.rs  mock.rs  mod.rs
bzauth-rs/src/runtimes/: mod.rs
bzauth-rs/src/runtimes/axum/: compat.rs  mod.rs  runtime.rs
bzauth-rs/src/runtimes/axum/extractors/: auth.rs  mod.rs  provider.rs
bzauth-rs/src/runtimes/axum/routes/: authorise.rs  callback.rs  csrf.rs  mod.rs
bzauth-rs/src/tools/: error.rs  mod.rs
bzauth-rs/src/tools/actions/: mod.rs  register.rs  sign_in.rs
bzauth-rs/src/tools/http/: cookie.rs  mod.rs  request.rs  response.rs  status.rs
bzauth-rs/src/tools/routes/: authorise.rs  callback.rs  csrf.rs  mod.rs
bzauth-rs/src/tools/util/: awaitable.rs  generators.rs  mod.rs  request_extractors.rs  try_async.rs
bzauth-rs/tests/: test_00_json_store.rs  test_01_provider_server.rs  test_02_test_runtime.rs  test_03_environment.rs  test_axum_runtime.rs
bzauth-rs/tests/mock/: adaptor.rs  consts.rs  environment.rs  json_store.rs  mod.rs  provider.rs  provider_server.rs  runtime.rs  signals.rs
scripts/: format.sh
