[package]
name = "bzauth-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["adapt_diesel", "runtime_axum"]
adapt_diesel = ["diesel"]
adapt_sqlx = []
runtime_axum = ["axum"]
runtime_actix = []

[dependencies]
# Core dependencies
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
oauth2 = "5.0.0"
reqwest = { version = "0.12.15", features = ["json"] }

# Supported runtimes
# todo: actix-web ? etc.
axum = { version = "0.8.4", features = ["macros", "json"], optional = true }

# Data adapters
# todo: sqlx ? etc.
diesel = { version = "2.2.8", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "r2d2",
  "chrono",
], optional = true }

# Data services

# Utilities
async-trait = "0.1.88"
dyn-clone = "1.0.19"
paste = "1.0.15"
chrono = "0.4.40"
http = "1.3.1"
url = "2.5.4"
rand = "0.9.1"
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["std"] }
# rand_distr = "0.5.1"

[dev-dependencies]
