[package]
name = "bzauth-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["adapt_diesel", "runtime_axum", "backend_sqlite"]

# Adapter features
adapt_diesel = ["diesel"] # diesel -> adapt_diesel
adapt_sqlx = ["sqlx"]     # sqlx -> adapt_sqlx

# Runtime features
runtime_axum = ["axum"]       # Pulls in axum runtime support
runtime_actix = ["actix-web"] # Pulls in actix-web runtime support

# Backend features
backend_sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "sqlx/sqlite"] # SQLite support
backend_postgres = []                             # TODO: Add Postgres support

# Testing features
test_sequential = []

[dependencies]
# Core dependencies
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "5.0"
reqwest = { version = "0.12", features = ["json"] }

# Supported runtimes
axum = { version = "0.8", features = ["macros", "json"], optional = true }
actix-web = { version = "4.11", features = [
  "macros",
], optional = true } # TODO

# Data adapters
diesel = { version = "2.2", features = [
  "r2d2",
  "chrono",
], optional = true }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "chrono",
], optional = true }

# Utilities
async-trait = "0.1"
dyn-clone = "1.0"
paste = "1.0"

chrono = "0.4"
http = "1.3"
url = "2.5"
rand = "0.9"
uuid = { version = "1.17", features = ["v4"] }

tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["std"] }

[dev-dependencies]
tempfile = "3.20"
